<resources>
    <string name="app_name">Intent</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="name">Name</string>
    <string name="name_hint">Input your name</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="password_hint">Input your password</string>
    <string name="parcelable">Parcelable</string>
    <string name="profile">Profile</string>
    <string name="username_hint">Input your username</string>
    <string name="username">Username</string>
    <string name="android_bundle">Android Bundle</string>
    <string name="age">Age</string>
    <string name="age_hint">Input your age</string>
    <string name="exit">Exit</string>
</resources>
