<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/button_explicit"
            android:text="@string/explicit_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleExplicitIntent"
            />

        <Button
            android:id="@+id/button_implicit"
            android:text="@string/implicit_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_bundle"
            android:text="@string/android_bundle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_parcelable"
            android:text="@string/parcelable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_exit"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleExit"
            />

</LinearLayout>